[package]
name = "qute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
mqttbytes = { version = "0.6.0", features = ["v5"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
