[package]
name = "qute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures-core = "0.3.28"
matchit = "0.7.0"
mqttbytes = { version = "0.6.0", features = ["v5"] }
regex = "1.9.6"
serde = "1.0.160"
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
